...
            }

            Spacer()  /// A spacer for pushing the icon to the right.
            
            /// The icon which represents the completion status of the task.
            Image(systemName: task.isCompleted ? AppConstants.checkmarkIcon : AppConstants.circleIcon)
                .accessibilityIdentifier(task.isCompleted ? "CompletedIcon" : "IncompleteIcon")  /// Identifier for UI testing.
                .font(.system(size: 30))  /// Set the font size of the icon.
                .scaleEffect(scale)  /// Apply scaling effect.
                .onTapGesture {
                    let generator = UIImpactFeedbackGenerator(style: .medium)
                    generator.impactOccurred()  /// Generate haptic feedback.
                    
...
